Fix nav link spacing

--- a/index.css
+++ b/index.css
@@ -17,14 +17,18 @@ html {
 body {
     margin: 0%;
     color: white;
+    font-family:'Times New Roman', Times, serif;
 }
 
 h1 {
     font-size: 65px;
+    font-family: 'Times New Roman', Times, serif;
 }
 
 h2 {
     font-size: 35px;
+    font-family: 'Times New Roman', Times, serif;
+
 }
 
 p, li {
@@ -53,12 +57,17 @@ p, li {
 
 .sidebarWrapper {
     position: absolute;
-    bottom: 1rem;
+    bottom: 16%;
     text-align: left;
     padding: 45px;
     margin: 12px;
 }
 
+.nav ul {
+    position: absolute;
+    text-align: center;
+    left: 2rem;
+}
 .nav li {
     list-style: none;
 }
